changes to move servers

--- a/.htaccess
+++ b/.htaccess
@@ -46,9 +46,21 @@ RewriteRule .* index.php [F]
 # www redirect (or vice versa), place that code here. Ensure those
 # redirects use the correct RewriteRule syntax and the [R=301,L] flags.
 #
-RewriteCond %{HTTP_HOST} !^admin\.worldwideinterweb\.com
-RewriteCond %{REQUEST_URI} ^/administrator/
-RewriteRule ^(.*)$ http://admin.worldwideinterweb.com/$1 [R=301,L,QSA]
+#RewriteCond %{HTTP_HOST} !^www\.worldwideinterweb\.com
+#RewriteCond %{REQUEST_URI} ^/administrator/
+#RewriteRule ^(.*)$ http://www.worldwideinterweb.com/$1 [R=301,L,QSA]
+
+
+RewriteCond %{HTTP_HOST} ^admin\.worldwideinterweb\.com
+RewriteRule robots.txt robots2.txt
+
+RewriteCond %{HTTP_HOST} ^www1\.worldwideinterweb\.com
+RewriteRule robots.txt robots2.txt
+RewriteCond %{HTTP_HOST} ^www2\.worldwideinterweb\.com
+RewriteRule robots.txt robots2.txt
+RewriteCond %{HTTP_HOST} ^dev\.worldwideinterweb\.com
+RewriteRule robots.txt robots2.txt
+#RewriteRule robots.txt robots3.txt
 ## End - Custom redirects
 
 ##
