--- a/.htaccess
+++ b/.htaccess
@@ -46,15 +46,19 @@ RewriteRule .* index.php [F]
 # www redirect (or vice versa), place that code here. Ensure those
 # redirects use the correct RewriteRule syntax and the [R=301,L] flags.
 #
-#RewriteCond %{HTTP_HOST} !^www\.worldwideinterweb\.com
-#RewriteCond %{REQUEST_URI} ^/administrator/
-#RewriteRule ^(.*)$ http://www.worldwideinterweb.com/$1 [R=301,L,QSA]
+RewriteCond %{HTTP_HOST} !^www\.worldwideinterweb\.com
+#RewriteCond %{HTTP_HOST} !^10.1.1.3.
+RewriteRule ^(.*)$ http://www.worldwideinterweb.com/$1 [R=301,L,QSA]
 
 
 RewriteCond %{HTTP_HOST} ^admin\.worldwideinterweb\.com
 RewriteRule robots.txt robots2.txt
 
 RewriteCond %{HTTP_HOST} ^www1\.worldwideinterweb\.com
+RewriteRule robots.txt robots2.txt
+RewriteCond %{HTTP_HOST} ^web1\.worldwideinterweb\.com
+RewriteRule robots.txt robots2.txt
+RewriteCond %{HTTP_HOST} ^web2\.worldwideinterweb\.com
 RewriteRule robots.txt robots2.txt
 RewriteCond %{HTTP_HOST} ^www2\.worldwideinterweb\.com
 RewriteRule robots.txt robots2.txt
